# scDesigner

./: .gitignore  README.md
.github/: CODEOWNERS
R/scDesigner/: DESCRIPTION  NAMESPACE
examples/: DE.Rmd  DE.ipynb  Pseudotime_Goodness.ipynb  aic_bic_comparison.ipynb  aic_bic_comparison_v2.ipynb  data_convert.Rmd  documentation_data.Rmd  documentation_data.ipynb  exper.ipynb  fast_copula_demo.ipynb  large_scale.ipynb  memento.ipynb  minimal.ipynb  minimal_poisson.ipynb  multiview.ipynb  nb_scale_test.ipynb  param_unwrapper.ipynb  poisson_multi_formula.ipynb  positive_nmf.ipynb  quickstart.ipynb  quickstart_log.ipynb  scalability_study.Rmd  scalability_study.ipynb  scalability_study.py  scalability_vis.Rmd  sciviewer_control.py  sciviewer_investing.ipynb  single_cell_trajectory.ipynb  test_nb.ipynb  transform.ipynb  vignettes-atac.ipynb  vignettes-batch-effect.ipynb  vignettes-composite.ipynb  vignettes-condition-effect.ipynb  vignettes-large-scale.ipynb  vignettes-library-size.ipynb  vignettes-multiple-lineages.ipynb  vignettes-quickstart.ipynb  vignettes-spatial-deconvolution.ipynb  vignettes-spatial.ipynb
examples/cluster/: requirements.submit  set1.submit  set2.submit
examples/validation/: README.md  (+1 more)
glm-toolkit/: README.md  pyproject.toml
glm-toolkit/src/glm_toolkit/: __init__.py
glm-toolkit/src/glm_toolkit/data/: group.py
glm-toolkit/src/glm_toolkit/estimators/: poisson.py
glm-toolkit/src/glm_toolkit/predictors/: negbin.py  zero_inflated_negbin.py
glm-toolkit/tests/: glm_toolkit_test.ipynb
scdesigner/: pyproject.toml  setup.py
(+167 files in other folders)
