[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glm-toolkit"
version = "0.1.0"
description = "A toolkit for Generalized Linear Models with various estimators, predictors, and samplers"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "torch>=1.9.0",
    "scipy>=1.7.0",
    "anndata>=0.8.0",
    "formulaic>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/glm-toolkit"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
] 